--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           tag_name: v1
           release_name: Release v1
-          body: python-autograde
+          body: ${{ github.repository }}
